# llma

./: .eslintrc.js  .gitignore  .llma_history.jsonl  .vscodeignore  CHANGELOG.md  README.md  STREAMING_REFACTOR.md  esbuild.js  llma-0.4.1.vsix  llma-2026.6.9.vsix  log.txt  njust-cj-2026.6.9.vsix  package-lock.json  package.json  tsconfig.json
.vsix/: llma-0.4.2.vsix  llma-0.4.3.vsix  llma-0.4.4.vsix  llma-0.4.5.vsix  llma-0.4.51.vsix  llma-0.4.52.vsix  llma-0.4.6.vsix  llma-0.5.1.vsix  llma-0.5.3.vsix  llma-1.0.0.vsix  llma-2026.2.16.vsix  llma-2026.2.17.vsix  llma-2026.2.18.vsix  llma-2026.3.0.vsix  llma-2026.3.1.vsix  llma-2026.4.0.vsix  llma-2026.4.1.vsix  llma-2026.4.2.vsix  llma-2026.4.3.vsix  llma-2026.4.4.vsix  llma-2026.4.5.vsix  llma-2026.5.3.vsix  llma-2026.5.4.vsix  llma-2026.6.1.vsix  llma-2026.6.3.vsix  llma-2026.6.5.vsix  llma-2026.6.7.vsix  llma-2026.6.9.vsix
docs/: theme-switch-diff.md
fixtures/cpp/: Animal.cpp  Animal.h  CMakeLists.txt  Cat.cpp  Cat.h  Dog.cpp  Dog.h  Duck.cpp  Duck.h  Flyable.h  Swimmable.h  main.cpp
fixtures/python/: __init__.py  animal.py  cat.py  dog.py  duck.py  flyable.py  main.py  pyproject.toml  swimmable.py
media/: Kimi.css  OpenAI.css  README.md  base64__.py  cangjie.css  chat-template.html  chat.html  deepseek.css  doubao.css  huggingface.css  icon.txt  localhost.css  qwen.css  zhipu.css
scripts/: build-chat.js
src/: api.ts  commands.ts  compilation.ts  config.ts  constants.ts  extension.ts  extension.ts.backup  inlineCompletionProvider.ts  mcpClient.ts  statusBar.ts  types.ts  utils.ts  webSearch.ts
(+163 files in other folders)
